feat(25): Creating method to toggle ticket between opened and closed
